# inmyrepo

./: app.py  functions.py  pyproject.toml  pyvenv.cfg  requirements.txt
Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
